# basita

./: .gitignore  Cargo.toml  README.md  TODO.md
resources/worlds/: world1.json
src/: application.rs  image_resources.rs  input.rs  main.rs  main2.rs
src/basita/: creator.rs  engine.rs  entity.rs  game.rs  input.rs  lib.rs  mod.rs  new_render_system.rs  sdl_context.rs  world.rs
src/basita/assets/: asset.rs  image.rs  mod.rs  world.rs
src/basita/components/: colliders.rs  component.rs  component_iter.rs  component_join.rs  mod.rs  physic_body.rs  sprite.rs  storage.rs  transform.rs
src/basita/core/: components.rs  mod.rs  resources.rs
src/basita/events/: event.rs  mod.rs
src/basita/gui/: commands.rs  gui.rs  mod.rs  resources.rs
src/basita/math/: mod.rs  vector2.rs
src/basita/mixer/: assets.rs  mixer.rs  mod.rs  resources.rs
src/basita/physics/: components.rs  helpers.rs  mod.rs
src/basita/renderer/: assets.rs  components.rs  mod.rs  renderer.rs  resources.rs  systems.rs
src/basita/resources/: image_resources.rs  mod.rs  resource.rs  resource_manager.rs  world_resources.rs
src/basita/sdl/: assets.rs  chunks.rs  fonts.rs  mod.rs  musics.rs  sdl.rs  sdl_context.rs  textures.rs
src/basita/serialization/: mod.rs  (+1 more)
src/components/: colliders.rs  component.rs  mod.rs  sprite.rs  transform.rs
src/engine/: application.rs  engine.rs  input.rs  mod.rs  sdl_context.rs
src/game/: game.rs  main.rs  mod.rs  player_system.rs
src/math/: mod.rs  vector2.rs
src/resources/: mod.rs
src/systems/: collider_system.rs  mod.rs  renderer_system.rs
(+51 files in other folders)
