[package]
name = "platformer-maker"
version = "0.1.0"
authors = ["Matheus Lessa <matheuslessarodrigues@gmail.com>"]
build = "build.rs"

[lib]
name = "basita"
path = "src/basita/lib.rs"

[[bin]]
name = "platformer-maker"
path = "src/main.rs"

[dependencies]
sdl2 = {version = "0.31", default-features = false,features = ["ttf","image","mixer"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
