[package]
name = "basita"
version = "0.1.0"
authors = ["Matheus Lessa <matheus@fastmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "basita"
path = "src/basita/lib.rs"

[[bin]]
name = "basita-test"
path = "src/main.rs"

[dependencies]
sdl2 = {version = "0.31", default-features = false, features = ["ttf","image","mixer"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
fxhash = "0.2"
